--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev":"nodemon api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vikram Samak",
   "dependencies": {
     "appwrite": "^11.0.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
