--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "dev":"nodemon api.js",
+    "start":"node api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vikram Samak",
